WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21113
r36771
caused www.nytimes.com to not display when you return to it using back/forward
https://bugs.webkit.org/show_bug.cgi?id=21113
Summary
r36771 caused www.nytimes.com to not display when you return to it using back...
Brady Eidson
Reported
2008-09-25 11:41:12 PDT
r36771
caused www.nytimes.com to not display when you return to it using back/forward. Since this was primarily a "cleanup patch", I rolled it out in
r36902
as this was a pretty severe regression (important site). Steps to reproduce with 36771 in place: 1 - Visit www.google.com, let it finish loading 2 - Visit www.nytimes.com, let it finish loading 3 - Click "back" to return to google.com 4 - Click "forward" to return to nytimes.com After step 4, nytimes.com is blank. All of the resources are there and loaded, and Cmd-R to forcefully refresh the page causes it to actually render, but whenever you return to it through back or forward, it is always blank.
Attachments
Patch #2
(5.19 KB, patch)
2008-09-25 12:58 PDT
,
Dave Hyatt
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2008-09-25 12:58:57 PDT
Created
attachment 23817
[details]
Patch #2
Darin Adler
Comment 2
2008-09-25 13:10:01 PDT
Comment on
attachment 23817
[details]
Patch #2 CSSRule* CSSRule::parentRule() const { - // FIXME: I believe this always returns 0. - // A correct implementation would have to look farther up than just the parent. return (parent() && parent()->isRule()) ? static_cast<CSSRule*>(parent()) : 0; } Why is this comment wrong. Isn't the parent almost always a style sheet, and not a rule? r=me
Dave Hyatt
Comment 3
2008-09-25 13:16:17 PDT
Fixed in
r36904
.
Dave Hyatt
Comment 4
2008-09-25 14:11:22 PDT
***
Bug 21119
has been marked as a duplicate of this bug. ***
Matt Lilek
Comment 5
2008-09-25 18:22:26 PDT
***
Bug 21125
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug