2008-09-25  David Hyatt  <hyatt@apple.com>

https://bugs.webkit.org/show_bug.cgi?id=21113

        Putting r36771 back in with a fix to the addPendingSheet check in CSSImportRule::insertedIntoParent.

        Reviewed by Darin Adler

        * css/CSSImportRule.cpp:
        (WebCore::CSSImportRule::insertedIntoParent):
        * css/CSSRule.cpp:
        (WebCore::CSSRule::parentStyleSheet):
        (WebCore::CSSRule::parentRule):
        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::CSSStyleSheet):
        * css/CSSStyleSheet.h:



Canonical link: https://commits.webkit.org/29174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36904 268f45cc-cd09-0410-ab3c-d52691b4dbfc