WebCore/css/CSSStyleSheet.cpp
@@ -51,11 +51,12 @@ CSSStyleSheet::CSSStyleSheet(Node *parentNode, const String& href, const String&
 
 CSSStyleSheet::CSSStyleSheet(CSSRule *ownerRule, const String& href, const String& charset)
     : StyleSheet(ownerRule, href)
-    , m_doc(0)
     , m_namespaces(0)
     , m_charset(charset)
     , m_loadCompleted(false)
 {
+    CSSStyleSheet* parentSheet = ownerRule ? ownerRule->parentStyleSheet() : 0;
+    m_doc = parentSheet ? parentSheet->doc() : 0;
 }
 
 CSSStyleSheet::~CSSStyleSheet()
@@ -177,15 +178,6 @@ void CSSStyleSheet::checkLoaded()
     if (parent())
         parent()->checkLoaded();
     m_loadCompleted = ownerNode() ? ownerNode()->sheetLoaded() : true;
-}
-
-DocLoader *CSSStyleSheet::docLoader()
-{
-    if (!m_doc) // doc is 0 for the user- and default-sheet!
-        return 0;
-
-    // ### remove? (clients just use sheet->doc()->docLoader())
-    return m_doc->docLoader();
 }
 
 void CSSStyleSheet::styleSheetChanged()
