WebCore/css/CSSStyleSheet.h
@@ -80,8 +80,9 @@ public:
     virtual bool isLoading();
 
     virtual void checkLoaded();
-    DocLoader* docLoader();
+
     Document* doc() { return m_doc; }
+
     const String& charset() const { return m_charset; }
 
     bool loadCompleted() const { return m_loadCompleted; }
